# VSoundCheckr

./: .gitignore  CMakeLists.txt  README.md  main.cpp  project.cpp  project.h  vcpkg.json
.github/: FUNDING.yml
Audio/: AudioIO.cpp  AudioIO.h  AudioIOBase.cpp  AudioIOBase.h  Dither.cpp  Dither.h  SampleCount.cpp  SampleCount.h  SampleFormat.cpp  SampleFormat.h  Track.cpp  audioBuffers.cpp  audioBuffers.h
Audio/AudioData/: SampleBlock.cpp  SampleBlock.h  Sequence.cpp  Sequence.h  SqliteSampleBlock.cpp  SqliteSampleBlock.h
Audio/IO/: AudioIO.cpp  AudioIO.h  PlaybackSchedules.cpp  PlaybackSchedules.h  Resample.cpp  Resample.h
MemoryManagement/: MemoryTypes.cpp  MemoryTypes.h  MemoryX.cpp  MemoryX.h
MemoryManagement/Math/: float_cast.h
Midi/: MidiIO.cpp  MidiIO.h  Snapshots.cpp  Snapshots.h
Playback/: PlaybackHandler.cpp  PlaybackHandler.h  Track.cpp  Track.h
Playback/AudioGraph/: Channel.cpp  Channel.h  buffers.cpp  buffers.h
Playback/Sequences/: AudioIOSequences.cpp  AudioIOSequences.h  SampleTrack.cpp  SampleTrack.h
Saving/: DBConnection.cpp  DBConnection.h  Exporter.cpp  Exporter.h  SaveFileDB.cpp  SaveFileDB.h
Saving/File Types/: WavFile.cpp  WavFile.h
Visual/: AppBase.cpp  AppBase.h  PlaybackHandler.cpp  PlaybackHandler.h
